[package]
name = "trailer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
colored = "2.0.0"
notify = { version = "6.0.1", features = ["macos_kqueue"] }
sqlformat = "0.2.1"
term_size = "0.3.2"
tree-sitter = "0.20.10"
